--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,41 +1,23 @@
-body{
-    background-color: rgb(24, 22, 22);
-    color:white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+@import "./variables.scss";
+@import "./button.scss";
+@import "./position.scss";
+
+body {
+  background-color: rgb(24, 22, 22);
+  color: white;
+  font-family: $primary-font;
 }
 
 header {
-    h1{
-        &:hover{
-            font-style: italic;
-        }
+  h1 {
+    &:hover {
+      font-style: italic;
     }
+  }
 }
 
-form {
-    label {
-        font-family: 'Courier New', Courier, monospace;
-    }
-}
-.btn {
-    width: 10rem;
-    border: 0;
-    border-radius: 9px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 5px; 
-    background-color:orangered;
-    &:hover{
-        background-color: orange;
-    }
-}
-.btn-primary {
-    @extend .btn
-}
-.btn-secondary {
-    @extend .btn;
-    background-color:coral;
-}
-
-.mt-3 {
-    margin-top: 3px;
+#form-texts {
+  p {
+    font-family: $secondary-font;
+  }
 }
