--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,29 +10,29 @@
 }
 
 .btn-primary {
-  background-color: #6B2AEE;
+  background-color: #6b2aee;
 }
 .btn-primary:hover {
-  background-color: coral;
+  background-color: darkblue;
 }
 
 .btn-secondary {
-  background-color: #02E7D9;
+  background-color: #02e7d9;
 }
 .btn-secondary:hover {
-  background-color: coral;
+  background-color: darkblue;
 }
 
 .mt-2 {
-  margin-top: 2px;
+  margin: 2px, 0, 0, 0;
 }
 
 .mt-3 {
-  margin-top: 3px;
+  margin: 3px, 0, 0, 0;
 }
 
 .mt-4 {
-  margin-top: 4px;
+  margin: 4px, 0, 0, 0;
 }
 
 .text-center {
