--- a/src/scss/position.scss
+++ b/src/scss/position.scss
@@ -1,12 +1,14 @@
-.mt-2 {
-  margin-top: 2px;
+@mixin margin($mt, $me, $ms, $mb) {
+  margin: $mt, $me, $mb, $ms;
 }
-
+.mt-2 {
+  @include margin(2px, 0, 0, 0);
+}
 .mt-3 {
-  margin-top: 3px;
+  @include margin(3px, 0, 0, 0);
 }
 .mt-4 {
-  margin-top: 4px;
+  @include margin(4px, 0, 0, 0);
 }
 .text-center {
   text-align: center;
