--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,8 +1,8 @@
-$primary-color: #6B2AEE;
-$secondary-color: #02E7D9;
+$primary-color: #6b2aee;
+$secondary-color: #02e7d9;
 $success-color: #00d34d;
 
-$primary-font: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-$secondary-font: 'Courier New', Courier, monospace;
+$primary-font: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+$secondary-font: "Courier New", Courier, monospace;
 
-$hover-color: coral;
+$hover-color: darkblue;
