--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,6 +1,7 @@
 $primary-color: #6b2aee;
 $secondary-color: #02e7d9;
 $success-color: #00d34d;
+$warning-color: #fff641;
 
 $primary-font: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 $secondary-font: "Courier New", Courier, monospace;
