--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,25 +1,29 @@
-.btn, .btn-secondary, .btn-primary {
+.btn {
   width: 10rem;
   border: 0;
   border-radius: 9px;
   font-family: Arial, Helvetica, sans-serif;
   padding: 5px;
 }
-.btn:disabled, .btn-secondary:disabled, .btn-primary:disabled {
+.btn:disabled {
   background-color: gray;
 }
-
-.btn-primary {
+.btn.btn-primary {
   background-color: #6b2aee;
 }
-.btn-primary:hover {
+.btn.btn-primary:hover {
   background-color: darkblue;
 }
-
-.btn-secondary {
+.btn.btn-secondary {
   background-color: #02e7d9;
 }
-.btn-secondary:hover {
+.btn.btn-secondary:hover {
+  background-color: darkblue;
+}
+.btn.btn-success {
+  background-color: #00d34d;
+}
+.btn.btn-success:hover {
   background-color: darkblue;
 }
 
