Fazendo minificação/início do desenvolvimento

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,73 +1,1 @@
-.btn {
-  width: 10rem;
-  border: 0;
-  border-radius: 9px;
-  font-family: Arial, Helvetica, sans-serif;
-  padding: 5px;
-}
-.btn:disabled {
-  background-color: gray;
-}
-.btn.btn-primary {
-  background-color: #6b2aee;
-}
-.btn.btn-primary:hover {
-  background-color: #5512de;
-}
-.btn.btn-secondary {
-  background-color: #02e7d9;
-}
-.btn.btn-secondary:hover {
-  background-color: #02bfb3;
-}
-.btn.btn-success {
-  background-color: #00d34d;
-}
-.btn.btn-success:hover {
-  background-color: #00aa3e;
-}
-
-.mt-2 {
-  margin: 2px, 0, 0, 0;
-}
-
-.mt-3 {
-  margin: 3px, 0, 0, 0;
-}
-
-.mt-4 {
-  margin: 4px, 0, 0, 0;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  flex-direction: row;
-  align-items: center;
-}
-
-#form-texts {
-  display: flex;
-  flex-direction: column;
-}
-
-body {
-  background-color: rgb(24, 22, 22);
-  color: white;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-}
-
-header h1:hover {
-  font-style: italic;
-}
-
-#form-texts p {
-  font-family: "Courier New", Courier, monospace;
-}
-
-/*# sourceMappingURL=style.css.map */
+.btn{width:10rem;border:0;border-radius:9px;font-family:Arial,Helvetica,sans-serif;padding:5px}.btn:disabled{background-color:gray}.btn.btn-primary{background-color:#6b2aee}.btn.btn-primary:hover{background-color:#5512de}.btn.btn-secondary{background-color:#02e7d9}.btn.btn-secondary:hover{background-color:#02bfb3}.btn.btn-continue{background-color:#fff641}.btn.btn-continue:hover{background-color:#fff418}.btn.btn-exit{background-color:#cd0000}.btn.btn-exit:hover{background-color:#a40000}.mt-2{margin-top:2px}.mt-3{margin-top:3px}.mt-4{margin-top:4px}.text-center{text-align:center}.container{display:block;box-sizing:border-box}.container.start.result-dices{margin:10px;padding:25px;border:5px solid #fff}body{background-color:#181616;color:#fff;font-family:"Franklin Gothic Medium","Arial Narrow",Arial,sans-serif}header h1:hover{font-style:italic}#form-texts{font-family:"Courier New",Courier,monospace}/*# sourceMappingURL=style.css.map */
