--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -1,4 +1,4 @@
-@mixin button-style($back-color, $hover-color) {
+@mixin button-style($back-color) {
   background-color: $back-color;
   &:hover {
     // todo botão, quando passar por cima, vai escurecer 8% da sua cor
@@ -17,12 +17,15 @@
   }
   &.btn-primary {
     // usando o mixin "button-style"
-    @include button-style($primary-color, $hover-color);
+    @include button-style($primary-color);
   }
   &.btn-secondary {
-    @include button-style($secondary-color, $hover-color);
+    @include button-style($secondary-color);
   }
-  &.btn-success {
-    @include button-style($success-color, $hover-color);
+  &.btn-continue {
+    @include button-style($continue-color);
+  }
+  &.btn-exit {
+    @include button-style($exit-color);
   }
 }
