--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,7 +1,7 @@
 $primary-color: #6b2aee;
 $secondary-color: #02e7d9;
-$continue-color: #fff641;
-$exit-color: rgb(205, 0, 0);
+$exit-color: #cd0000;
+$warning-color: #ecde46;
 
 $primary-font: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 $secondary-font: "Courier New", Courier, monospace;
