tentativa de alinhar elementos com grid layout

--- a/src/public/scss/button.scss
+++ b/src/public/scss/button.scss
@@ -9,6 +9,7 @@
 .btn {
   width: 10rem;
   border: 0;
+  cursor: pointer;
   border-radius: 9px;
   font-family: Arial, Helvetica, sans-serif;
   padding: 5px;
