--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -1,6 +1,7 @@
 @import "./variables.scss";
 @import "./button.scss";
 @import "./position.scss";
+@import "./links.scss";
 
 body {
   background-color: rgb(24, 22, 22);
