--- a/src/public/scss/variables.scss
+++ b/src/public/scss/variables.scss
@@ -2,6 +2,7 @@ $primary-color: #6b2aee;
 $secondary-color: #02e7d9;
 $exit-color: #cd0000;
 $warning-color: #ecde46;
+$link-color: darkgoldenrod;
 
 $primary-font: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 $secondary-font: "Courier New", Courier, monospace;
