--- a/src/public/scss/variables.scss
+++ b/src/public/scss/variables.scss
@@ -4,5 +4,5 @@ $exit-color: #cd0000;
 $warning-color: #ecde46;
 $link-color: darkgoldenrod;
 
-$primary-font: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-$secondary-font: "Courier New", Courier, monospace;
+$primary-font: "Courier New", Courier, monospace;
+$secondary-font: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
